[feature]: ajout marché agricole et supervision
